# boilerplate-sdl2-image

./: CMakeLists.txt  build.bat  build.sh
src/: deltaTimer.cpp  ecs.cpp  main.cpp
src/include/: DeltaTimer.h  ECS.h
